# ntgen

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.py  tox.ini
.circleci/: config.yml
acceptance/: .gitignore  apartment.json  apartment_expected.txt
ntgen/: __init__.py  __main__.py  config.py  exception.py  main.py  models.py  ntgen.py  render.py  utils.py
tests/: conftest.py  sample_dicts.py
tests/end_to_end/: conftest.py  module_template.py  test_dict_equality.py
tests/integration/: test_utils.py
tests/unit/: test_main.py  test_models.py  test_ntgen.py  test_package.py  test_utils.py
